--- a/src/views/index.html
+++ b/src/views/index.html
@@ -78,6 +78,11 @@
       <span id="points-icon-text">0</span>
     </div>
 
+    <div id="lebuff-icon-container">
+      <img id="lebuff-icon" alt="Lebuff Icon" src="../assets/muscle.svg" />
+      <span id="lebuff-icon-text">0</span>
+    </div>
+
     <div id="map-info">
       <div class="map-info-text-wrapper">
         <span id="map-info-name" class="clickable">
@@ -156,6 +161,15 @@
           Final Score:
         </span>
         <span id="score-screen-points">
+          0
+        </span>
+      </div>
+
+      <div id="score-screen-lebuff-container">
+        <span id="score-screen-lebuff-base-text">
+          Owed Pushups:
+        </span>
+        <span id="score-screen-pushups">
           0
         </span>
       </div>
