--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -99,6 +99,16 @@
           </div>
 
           <div class="setting-container">
+            <label for="LebuffMode">Lebuff Mode</label>
+            <input type="checkbox" id="LebuffMode-input" name="LebuffMode"/>
+          </div>
+
+          <div id = "lebuff-settings-container" class="setting-container">
+            <label for="lebuffPushupCount">Starting Pushups</label>
+            <input type="number" id="lebuffPushupCount-input" name="lebuffPushupCount" min="0" max="500" placeholder="max. 500"/>
+          </div>
+
+          <div class="setting-container">
             <label for="skips">Skips</label>
             <input type="checkbox" id="skips-input" name="skips"/>
           </div>
